fix mobile spacing above fold

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -160,7 +160,7 @@ footer {
     }
 
         .big-spacer {
-            height: 60px;
+            height: 40px;
         }
 
     nav {
